# ot-harjoitustyo

./: .gitignore  README.md
2048/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
2048/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
2048/src/: clock.py  config.ini  direction.py  enums.py  event_queue.py  game.py  game_loop.py  game_timer.py  grid.py  index.py  menu.py  menu_loop.py  options.py  renderer.py  score.py  status.py
2048/src/leaderboard/: leaderboard.py  leaderboard_repository.py
2048/src/repository/: config_repository.py  leaderboard_repository.py
2048/src/spirtes/: border.py  cell.py  tile.py
2048/src/tests/: border_test.py  cell_test.py  grid_test.py  options_test.py  score_test.py  tile_test.py
2048/src/ui/: leaderboard.py  main_menu.py  menu.py  menu_loop.py  menu_renderer.py  start_options.py  theme.json  username.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.MD  teht2.MD
