[project]
name = "2048"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Tiilola",email = "180793269+user34911@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "pygame-gui (>=0.6.14,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
