[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Tiilola",email = "180793269+user34911@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
